<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/item_margin_2x">

    <TextView
        android:id="@+id/history_name_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_1_placeholder"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_value_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_1_amount"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="@id/history_name_1"
        app:layout_constraintStart_toStartOf="@id/history_name_1"
        app:layout_constraintTop_toBottomOf="@id/history_name_1" />

    <TextView
        android:id="@+id/history_count_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/item_margin"
        android:text="@string/currency_1_amount"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintBottom_toBottomOf="@id/history_name_1"
        app:layout_constraintStart_toEndOf="@id/history_name_1"
        app:layout_constraintTop_toTopOf="@id/history_name_1" />

    <TextView
        android:id="@+id/history_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_date"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintBottom_toBottomOf="@id/history_value_1"
        app:layout_constraintEnd_toStartOf="@id/history_count_2"
        app:layout_constraintStart_toEndOf="@id/history_count_1" />

    <TextView
        android:id="@+id/history_name_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_2_placeholder"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_value_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_2_amount"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        app:layout_constraintEnd_toEndOf="@id/history_name_2"
        app:layout_constraintStart_toStartOf="@id/history_name_2"
        app:layout_constraintTop_toBottomOf="@id/history_name_2" />

    <TextView
        android:id="@+id/history_count_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_margin"
        android:text="@string/currency_2_amount"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        app:layout_constraintBottom_toBottomOf="@id/history_name_2"
        app:layout_constraintEnd_toStartOf="@id/history_name_2"
        app:layout_constraintTop_toTopOf="@id/history_name_2" />

</androidx.constraintlayout.widget.ConstraintLayout>